src/format/cypher/parser.js
// @generated by Peggy 4.0.2.
//
// https://peggyjs.org/



  import { graph, addProperties } from "../../utils.js"
  const isEmpty = ({labels,properties}) => !labels.length && !Object.keys(properties).length

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Create: peg$parseCreate };
  var peg$startRuleFunction = peg$parseCreate;

  var peg$c0 = "create";
  var peg$c1 = ",";
  var peg$c2 = "(";
  var peg$c3 = ")";
  var peg$c4 = ":";
  var peg$c5 = "[";
  var peg$c6 = "]";
  var peg$c7 = "{";
  var peg$c8 = "}";
  var peg$c9 = "true";
  var peg$c10 = "false";
  var peg$c11 = "null";
  var peg$c12 = "-";
  var peg$c13 = "0";
  var peg$c14 = ".";
  var peg$c15 = "\"";
  var peg$c16 = "'";
  var peg$c17 = "\\";
  var peg$c18 = "b";
  var peg$c19 = "f";
  var peg$c20 = "n";
  var peg$c21 = "r";
  var peg$c22 = "t";
  var peg$c23 = "u";
  var peg$c24 = "`";
  var peg$c25 = "/*";
  var peg$c26 = "*";
  var peg$c27 = "*/";
  var peg$c28 = "//";
  var peg$c29 = "\r";
  var peg$c30 = "\n";

  var peg$r0 = /^[1-9]/;
  var peg$r1 = /^[0-9]/;
  var peg$r2 = /^[eE]/;
  var peg$r3 = /^[+\-]/;
  var peg$r4 = /^[^"\\]/;
  var peg$r5 = /^[^'\\]/;
  var peg$r6 = /^["'\/\\]/;
  var peg$r7 = /^[0-9a-f]/i;
  var peg$r8 = /^[^`]/;
  var peg$r9 = /^[\-\xAD\u2010\u2011\u2012\u2013\u2014\u2015\u2212\uFE58\uFE63\uFF0D]/;
  var peg$r10 = /^[<\u27E8\u3008\uFE64\uFF1C]/;
  var peg$r11 = /^[>\u27E9\u3009\uFE65\uFF1E]/;
  var peg$r12 = /^[ \v\b\t\f\r\n\x1C-\x1F\u1680\u180E\u2000-\u200A\u2028\u2029\u202F\u205F\u3000]/;
  var peg$r13 = /^[^*]/;
  var peg$r14 = /^[^\/]/;
  var peg$r15 = /^[^\n\r]/;

  var peg$e0 = peg$literalExpectation("CREATE", true);
  var peg$e1 = peg$literalExpectation(",", false);
  var peg$e2 = peg$literalExpectation("(", false);
  var peg$e3 = peg$literalExpectation(")", false);
  var peg$e4 = peg$otherExpectation("type");
  var peg$e5 = peg$literalExpectation(":", false);
  var peg$e6 = peg$literalExpectation("[", false);
  var peg$e7 = peg$literalExpectation("]", false);
  var peg$e8 = peg$literalExpectation("{", false);
  var peg$e9 = peg$literalExpectation("}", false);
  var peg$e10 = peg$literalExpectation("true", true);
  var peg$e11 = peg$literalExpectation("false", true);
  var peg$e12 = peg$literalExpectation("null", true);
  var peg$e13 = peg$literalExpectation("-", false);
  var peg$e14 = peg$literalExpectation("0", false);
  var peg$e15 = peg$classExpectation([["1", "9"]], false, false);
  var peg$e16 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e17 = peg$literalExpectation(".", false);
  var peg$e18 = peg$classExpectation(["e", "E"], false, false);
  var peg$e19 = peg$classExpectation(["+", "-"], false, false);
  var peg$e20 = peg$literalExpectation("\"", false);
  var peg$e21 = peg$classExpectation(["\"", "\\"], true, false);
  var peg$e22 = peg$literalExpectation("'", false);
  var peg$e23 = peg$classExpectation(["'", "\\"], true, false);
  var peg$e24 = peg$literalExpectation("\\", false);
  var peg$e25 = peg$classExpectation(["\"", "'", "/", "\\"], false, false);
  var peg$e26 = peg$literalExpectation("b", true);
  var peg$e27 = peg$literalExpectation("f", true);
  var peg$e28 = peg$literalExpectation("n", true);
  var peg$e29 = peg$literalExpectation("r", true);
  var peg$e30 = peg$literalExpectation("t", true);
  var peg$e31 = peg$literalExpectation("u", false);
  var peg$e32 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true);
  var peg$e33 = peg$anyExpectation();
  var peg$e34 = peg$literalExpectation("`", false);
  var peg$e35 = peg$classExpectation(["`"], true, false);
  var peg$e36 = peg$classExpectation(["-", "\xAD", "\u2010", "\u2011", "\u2012", "\u2013", "\u2014", "\u2015", "\u2212", "\uFE58", "\uFE63", "\uFF0D"], false, false);
  var peg$e37 = peg$classExpectation(["<", "\u27E8", "\u3008", "\uFE64", "\uFF1C"], false, false);
  var peg$e38 = peg$classExpectation([">", "\u27E9", "\u3009", "\uFE65", "\uFF1E"], false, false);
  var peg$e39 = peg$otherExpectation("whitespace");
  var peg$e40 = peg$classExpectation([" ", "\v", "\b", "\t", "\f", "\r", "\n", ["\x1C", "\x1F"], "\u1680", "\u180E", ["\u2000", "\u200A"], "\u2028", "\u2029", "\u202F", "\u205F", "\u3000"], false, false);
  var peg$e41 = peg$otherExpectation("comment");
  var peg$e42 = peg$literalExpectation("/*", false);
  var peg$e43 = peg$classExpectation(["*"], true, false);
  var peg$e44 = peg$literalExpectation("*", false);
  var peg$e45 = peg$classExpectation(["/"], true, false);
  var peg$e46 = peg$literalExpectation("*/", false);
  var peg$e47 = peg$literalExpectation("//", false);
  var peg$e48 = peg$classExpectation(["\n", "\r"], true, false);
  var peg$e49 = peg$literalExpectation("\r", false);
  var peg$e50 = peg$literalExpectation("\n", false);

  var peg$f0 = function() {
      return graph(nodes, edges)
    };
  var peg$f1 = function(n, edgeList) {
      const addNode = node => {
        if (!(node.id in nodes) || isEmpty(nodes[node.id])) {
          nodes[node.id] = node
        } else if (!isEmpty(node)) {
          error(`Can't create already declared node \`${node.id}\` with labels or properties`)
        }
      } 
      if ( edgeList.length ) {
        var from = n
        addNode(from)
        edgeList.forEach(({to, reverse, ...edge}) => {
          if (reverse) {
            edge.from = to.id
            edge.to = from.id
          } else {
            edge.from = from.id
            edge.to = to.id
          }
          addNode(to)
          edges.push(edge)
          from = to
        })
      } else if (n.id in nodes) {
        error(`Node \`${n.id}\` already declared`)
      } else {
        nodes[n.id] = n
      }
    };
  var peg$f2 = function(id, labels, props) { 
      // generate node identifier if missing
      id ??= "_"+(Math.random() + 1).toString(36).substring(2)
      // labels must be unique
      labels = Array.from(new Set(labels))
      return { id, labels, properties: addProperties(props || []) }
    };
  var peg$f3 = function(edge, to) {
      return { ...edge, to }
    };
  var peg$f4 = function(edge) {
      return edge
    };
  var peg$f5 = function(edge) {
      return { ...edge, reverse: true }
    };
  var peg$f6 = function(label, props) {
      return { labels:[label], properties: addProperties(props || []) }
    };
  var peg$f7 = function(props) { return props };
  var peg$f8 = function(key, values) {
      return [key, values]
    };
  var peg$f9 = function(entries) {
      if (entries.indexOf(null) > -1) {
        error("Collections containing null values can not be stored in properties")
      }
      if ( (new Set(entries.map(v => typeof v)).size > 1 ) ) {
        error("Collections must have values of homogeneous type")
      }
      return entries
    };
  var peg$f10 = function(value) { return value === null ? [] : [ value ] };
  var peg$f11 = function() { return true };
  var peg$f12 = function() { return false };
  var peg$f13 = function() { return null };
  var peg$f14 = function() { return parseFloat(text()) };
  var peg$f15 = function(chars) { return chars.join("") };
  var peg$f16 = function(chars) { return chars.join("") };
  var peg$f17 = function() { return "\b" };
  var peg$f18 = function() { return "\f" };
  var peg$f19 = function() { return "\n" };
  var peg$f20 = function() { return "\r" };
  var peg$f21 = function() { return "\t" };
  var peg$f22 = function(char) { return char };
  var peg$f23 = function(digits) { return String.fromCharCode(parseInt(digits, 16)) };
  var peg$f24 = function(char) { return char.match(/^(\p{ID_Start}|\p{Pc})/u) };
  var peg$f25 = function(char) { return char.match(/^(\p{ID_Continue}|\p{Sc})/u) };
  var peg$f26 = function(name) {
    return name.replaceAll("``","`").slice(1,-1)
  };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseCreate() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parseSP();
    if (s3 === peg$FAILED) {
      s3 = null;
    }
    s4 = input.substr(peg$currPos, 6);
    if (s4.toLowerCase() === peg$c0) {
      peg$currPos += 6;
    } else {
      s4 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s4 !== peg$FAILED) {
      s5 = peg$parseSP();
      if (s5 === peg$FAILED) {
        s5 = null;
      }
      s6 = peg$parsePattern();
      if (s6 !== peg$FAILED) {
        s7 = peg$parseSP();
        if (s7 === peg$FAILED) {
          s7 = null;
        }
        s3 = [s3, s4, s5, s6, s7];
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parseSP();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s4 = input.substr(peg$currPos, 6);
      if (s4.toLowerCase() === peg$c0) {
        peg$currPos += 6;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parseSP();
        if (s5 === peg$FAILED) {
          s5 = null;
        }
        s6 = peg$parsePattern();
        if (s6 !== peg$FAILED) {
          s7 = peg$parseSP();
          if (s7 === peg$FAILED) {
            s7 = null;
          }
          s3 = [s3, s4, s5, s6, s7];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    s2 = peg$parseEOF();
    if (s2 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f0();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsePattern() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsePatternElement();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$currPos;
      s4 = peg$parseSP();
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      if (input.charCodeAt(peg$currPos) === 44) {
        s5 = peg$c1;
        peg$currPos++;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s5 !== peg$FAILED) {
        s6 = peg$parseSP();
        if (s6 === peg$FAILED) {
          s6 = null;
        }
        s4 = [s4, s5, s6];
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        s3 = peg$parsePatternElement();
        if (s3 === peg$FAILED) {
          peg$currPos = s2;
          s2 = peg$FAILED;
        } else {
          s2 = s3;
        }
      } else {
        s2 = s3;
      }
    }
    if (s1.length < 1) {
      peg$currPos = s0;
      s0 = peg$FAILED;
    } else {
      s0 = s1;
    }

    return s0;
  }

  function peg$parsePatternElement() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseNodePattern();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$parseSP();
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      s5 = peg$parsePatternElementChain();
      if (s5 !== peg$FAILED) {
        s3 = s5;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$parseSP();
        if (s4 === peg$FAILED) {
          s4 = null;
        }
        s5 = peg$parsePatternElementChain();
        if (s5 !== peg$FAILED) {
          s3 = s5;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      peg$savedPos = s0;
      s0 = peg$f1(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 40) {
        s1 = peg$c2;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e2); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsePatternElement();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 41) {
            s3 = peg$c3;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e3); }
          }
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseNodePattern() {
    var s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSP();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      s3 = peg$currPos;
      s4 = peg$parseName();
      if (s4 !== peg$FAILED) {
        s5 = peg$parseSP();
        if (s5 === peg$FAILED) {
          s5 = null;
        }
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s4 = [];
      s5 = peg$parseLabel();
      while (s5 !== peg$FAILED) {
        s4.push(s5);
        s5 = peg$parseLabel();
      }
      s5 = peg$parseProperties();
      if (s5 === peg$FAILED) {
        s5 = null;
      }
      if (input.charCodeAt(peg$currPos) === 41) {
        s6 = peg$c3;
        peg$currPos++;
      } else {
        s6 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s6 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f2(s3, s4, s5);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseLabel() {
    var s0, s1, s2, s3, s4;

    peg$silentFails++;
    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 58) {
      s1 = peg$c4;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSP();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      s3 = peg$parseName();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseSP();
        if (s4 === peg$FAILED) {
          s4 = null;
        }
        s0 = s3;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }

    return s0;
  }

  function peg$parsePatternElementChain() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseRelationshipPattern();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSP();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      s3 = peg$parseNodePattern();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f3(s1, s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseRelationshipPattern() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parseDash();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSP();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      s3 = peg$parseRelationshipDetail();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s4 = peg$parseSP();
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      s5 = peg$parseDash();
      if (s5 !== peg$FAILED) {
        s6 = peg$parseSP();
        if (s6 === peg$FAILED) {
          s6 = null;
        }
        s7 = peg$parseRightArrowHead();
        if (s7 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f4(s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseLeftArrowHead();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSP();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        s3 = peg$parseDash();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseSP();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          s5 = peg$parseRelationshipDetail();
          if (s5 === peg$FAILED) {
            s5 = null;
          }
          s6 = peg$parseSP();
          if (s6 === peg$FAILED) {
            s6 = null;
          }
          s7 = peg$parseDash();
          if (s7 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f5(s5);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseRelationshipDetail() {
    var s0, s1, s2, s3, s4, s5, s6;
